[package]
name = "os-checker-plugin-github-api"
version = "0.1.0"
edition = "2021"
exclude = [".github", "demo_jsons"]
license = "MIT"
repository = "https://github.com/os-checker/plugin-github-api"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

github_v3 = "1"
# reqwest = "0.12.8"

plugin = { version = "0.1.3", package = "os-checker-plugin" }
serde = "1"

# error handling
eyre = "0.6"
# logger
tracing = "0.1"
