[package]
name = "os-checker-plugin-github-api"
version = "0.1.3"
edition = "2021"
exclude = [".github", "demo_jsons"]
repository = "https://github.com/os-checker/plugin-github-api"
description = """
A plugin for os-checker to generate information based on github api to checked repositories.
"""

# dual licensing: "GPL-3.0 OR MulanPubL"
# MulanPubL is not listed by SPDX, failing to be published to crates.io.
# Thus use a license and another license-file as a workaround,
license = "GPL-3.0"
license-file = "./LICENSE.MulanPubL"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

github_v3 = "1"
# reqwest = "0.12.8"

plugin = { version = "0.1.3", package = "os-checker-plugin" }
serde = "1"

# error handling
eyre = "0.6"
# logger
tracing = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
